# Autonomous-Vehicles

./: .gitignore  README.md  check_folder.py
lab10_slam/: Readme.md
lab10_slam/bot_slam/: package.xml  setup.py
lab10_slam/code/: obstacles.py  waypoint_follower.py
lab1_python/: Readme.md  answers.txt
lab1_python/src/: lab1_review.py  lab1_score.py  light_detect.py
lab2_tutorials/: Readme.md
lab3_nodes/: Readme.md
lab3_nodes/code/: follower.py  leader.py  robot_room.py
lab3_nodes/lead_follow/: package.xml  setup.py
lab3_nodes/my_package/: package.xml  setup.py
lab3_nodes/py_pubsub/: package.xml  setup.py
lab4_nav/bot_drive/: package.xml  setup.py
lab5_logr/: Readme.md
lab5_logr/code/: classifier.py  test_set_1.py
lab5_logr/color_detect/: package.xml  setup.cfg  setup.py
lab5_logr/ex2/: logr_coefs.json
lab6_tf/: Readme.md
lab7_yolo/: Readme.md  lab7_yolo_tree.json  train.py
lab8_tracking/: README_tracking.md  lab8_tracking_tree.json  reflection.md  track_log.csv
lab8_tracking/sparc_tracking/: package.xml  setup.cfg  setup.py
lab8_tracking/sparc_tracking/config/: tracking_params.yaml
lab8_tracking/sparc_tracking/launch/: tracking.launch.py
lab8_tracking/sparc_tracking/resource/: sparc_tracking
lab8_tracking/sparc_tracking/rviz/: tracking.rviz
lab8_tracking/sparc_tracking/sparc_tracking/: __init__.py  tracking_node_skeleton.py  tracking_node_skeleton_plus_projection.py
lab9_lane/: Readme.md  pid_params.txt  pp_params.txt
project_cse434/: Directions.txt  Final_Project.world  Project_22_Presentation.pptx  README.md  train.py
(+133 files in other folders)
